Closed Bug 1695581 Opened 4 years ago Closed 4 years ago

dom/media/platforms/PDMFactory.cpp:755:23: error: ?media_rdd_ffvpx_enabled? is not a member of ?mozilla::StaticPrefs?; did you mean ?media_rdd_vpx_enabled??

Categories

(Core :: Audio/Video, defect, P1)

defect

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
thunderbird_esr78 --- unaffected
firefox-esr78 --- unaffected
firefox86 --- unaffected
firefox87 --- unaffected
firefox88 --- fixed

People

(Reporter: petr.sumbera, Assigned: bobowen)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:86.0) Gecko/20100101 Firefox/86.0

Steps to reproduce:

Build on Solaris SPARC failed with (i386 was fine):

 4:03.40 In file included from Unified_cpp_dom_media_platforms0.cpp:11:
 4:03.40 /builds2/psumbera/mozilla-central-build/dom/media/platforms/PDMFactory.cpp: In static member function ?static bool mozilla::PDMFactory::AllDecodersAreRemote()?:
 4:03.40 /builds2/psumbera/mozilla-central-build/dom/media/platforms/PDMFactory.cpp:755:23: error: ?media_rdd_ffvpx_enabled? is not a member of ?mozilla::StaticPrefs?; did you mean ?media_rdd_vpx_enabled??
 4:03.41   755 |          StaticPrefs::media_rdd_ffvpx_enabled() &&
 4:03.41       |                       ^~~~~~~~~~~~~~~~~~~~~~~
 4:03.41       |                       media_rdd_vpx_enabled

he first bad revision is:
changeset: 568768:6b30d87e0b90
user: Bob Owen <bobowencode@gmail.com>
date: Thu Feb 25 07:10:58 2021 -0800
description:
Bug 1692894 p2: Don't create devices for decoding when all decoders are remote. r=mattwoodrow

    Differential Revision: https://phabricator.services.mozilla.com/D105631
Keywords: regression
Regressed by: 1692894
Has Regression Range: --- → yes

The Bugbug bot thinks this bug should belong to the 'Core::Audio/Video' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → Audio/Video
Product: Firefox → Core

Ah, looks like I should have added more #ifs here.

Assignee: nobody → bobowencode
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Priority: -- → P1

I can confirm that the patch works for me. Thank you!

(In reply to Petr Sumbera from comment #4)

I can confirm that the patch works for me. Thank you!

Thanks for testing it.

Pushed by bobowencode@gmail.com: https://hg.mozilla.org/integration/autoland/rev/d2515d89f7de Add #if for MOZ_FFVPX around StaticPrefs::media_rdd_ffvpx_enabled in AllDecodersAreRemote. r=mattwoodrow
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: