Bug 1695581: Add #if for MOZ_FFVPX around StaticPrefs::media_rdd_ffvpx_enabled in AllDecodersAreRemote. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D106754